[fix] layout bugs

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -11,7 +11,8 @@ body.nav--active {
 }
 
 main {
-  padding: 3rem 1.5rem 1rem;
+  padding: 0% 10%;
+  background-color: var(--primary-color);
 
   @media screen and (min-width: $medium) {
     padding-left: calc(1.5rem + #{$navWidth});
